--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>recipes</title>
-    
+    <title>recetas</title>
+
 </head>
 <body>
-    <h1>Recipes</h1>
-
+    <h1>Recetas de Odin</h1>
+    <ul>
+<li><a href='recipes/pasta.html'> <h3>Pasta estilo carbonara</h3></a></li>
+<li><a href='recipes/macarrones_con_queso.html'> <h3>Macarrones con queso</h3> </a></li>
+<li><a href="recipes/pizza.html"> <h3>Pizza</h3> </a></li>
+    </ul>
 </body>
 </html>
